change echarts.js to 异步加载

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -709,7 +709,7 @@
 <script src="/static/js/html2canvas.min.js"></script>
 <script src="/static/js/html2canvas.svg.min.js"></script>
 <script src="/static/js/Chart.min.js"></script>
-<script src="/static/js/echarts.js"></script>
+<!-- <script src="/static/js/echarts.js"></script> -->
 <script src="/static/js/plasmid/angular.min.js"></script>
 <script src="/static/js/plasmid/angularplasmid.min.js"></script>
 <script src="/static/js/plasmid.js"></script>
