--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -114,6 +114,9 @@
 
       <span id="logo" class="item">
         <a href="/account/">
+          <b>
+            <span id="username"> hello, {{ username }} </span>
+          </b>
           <img id="logo" src="/static/img/logo.png">
         </a>
       </span>
