authority debug & search item detail updates to json loaded

--- a/designSite/search/templates/search.html
+++ b/designSite/search/templates/search.html
@@ -33,74 +33,8 @@
 
   <!-- Item Detail segment -->
   <div id="item-segment" class="ui vertical stripe segment invisible">
-    <div class="ui container">
-      <!-- Title -->
-      <div class="head">
-        <label>E.colipse-Who's your pABA:intelligent sun protection</label>
-        <i class="big icon close"></i>
-      </div>
-
-      <!-- Info -->
-      <div class="ui text container">
-        <label>Team: 123</label>
-        <label>Year: 123</label>
-        <img src="/static/img/design/unknown.png">
-        <p>to detect hazardous levels of sun radiation ...</p>
-      </div>
-
-
-      <!-- Second Row -->
-      <div class="second row">
-        <div class="two wide column">
-          <img src="/static/img/design/unknown.png" class="ui middle bordered rounded image">
-          <img src="/static/img/design/unknown.png" class="ui middle bordered rounded image">
-        </div>
-
-        <div class="two wide column">
-          <table class="ui celled table">
-            <thead>
-              <tr>
-                <th>Number</th>
-                <th>Name</th>
-                <th>Type</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td data-label="Number">123</td>
-                <td data-label="Name">xxx</td>
-                <td data-label="Type">yyy</td>
-              </tr>
-              <tr>
-                <td data-label="Number">123</td>
-                <td data-label="Name">xxx</td>
-                <td data-label="Type">yyy</td>
-              </tr>
-              <tr>
-                <td data-label="Number">123</td>
-                <td data-label="Name">xxx</td>
-                <td data-label="Type">yyy</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-      <!-- Third Row -->
-      <div class="ui container third row">
-        <img src="/static/img/design/unknown.png">
-        <p>To detect hazardous levels of sum radiation, their system was based on UVR-8, a UV sensing protein from
-          plants
-          and they fused UVR. To detect hazardous levels of sun radiation, their system was based on UVR-8, a UV
-          sensing
-          protein from plants and they fused UVR-8. To detect hazardous levels of sum radiation, their system was based
-          on UVR-8, a UV sensing protein from
-          plants
-          and they fused UVR. To detect hazardous levels of sun radiation, their system was based on UVR-8, a UV
-          sensing
-          protein from plants and they fused UVR-8 ...</p>
-      </div>
-    </div>
+    <div class="ui container"></div>
+  </div>
 </body>
 
 <script src="/static/js/jquery.min.js"></script>
