update new logo

--- a/designSite/account/templates/index.html
+++ b/designSite/account/templates/index.html
@@ -4,6 +4,7 @@
   <title>CO-RAD</title>
   <link rel="stylesheet" href="/static/css/fontsize.css">
   <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css">
+  <link rel="stylesheet" href="/static/css/index.css">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
         <a class="item" href="/">
-          <img id="logo" src="/static/img/logo.png">
+          <img class="logo" src="/static/img/logo.png">
         </a>
         {% if user.is_authenticated %}
         <div class="right item">
