--- a/designSite/account/templates/signup.html
+++ b/designSite/account/templates/signup.html
@@ -30,7 +30,7 @@
   <div class="content">
     <div class="ui center aligned container">
       <div class="ui center aligned">
-        <a href="/"><img src="/static/img/logo.png"></a>
+        <a href="/"><img class="logo" src="/static/img/logo.png"></a>
         <label class="ui center aligned">Sign up</label>
       </div>
 
