--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -132,11 +132,11 @@
         </span>
       {% endif %}
       <span id="logo" class="item">
+        <b>
+          <span id="username"> hello, {{ username }} </span>
+        </b>
         <a href="/account/">
-          <b>
-            <span id="username"> hello, {{ username }} </span>
-          </b>
-          <img id="logo" src="/static/img/logo.png">
+          <img src="/static/img/logo.png">
         </a>
       </span>
     </div>
