--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -13,7 +13,7 @@
     <div class="ui container">
       <div class="ui large secondary inverted menu">
         <a class="item">
-          <img id="logo" src="/static/img/logo.png">
+          <img class="logo" src="/static/img/logo.png">
         </a>
         <div class="right item">
           <h5>Welcome, {{ user.username }}!</h5>
