--- a/designSite/account/templates/signin.html
+++ b/designSite/account/templates/signin.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Signin - CO-RAD</title>
-  
+
   <link rel="shortcut icon" href="/static/img/favicon.png">
   <link rel="stylesheet" href="/static/css/fontsize.css">
   <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css">
@@ -14,18 +14,62 @@
 </head>
 
 <body>
-  <div class="ui main center aligned container">
+  <!-- signin div -->
+  <div class="signin">
+    <div class="border-div"></div>
+    {% if user.is_authenticated %}
+    <div class="content">
+      <div class="ui center aligned container">
+        <p>You've login</p>
+      </div>
+    </div>
+    {% else %}
+    <div class="content">
+      <div class="ui center aligned container">
+        <div class="ui center aligned">
+          <a href="/"><img class="logo" src="/static/img/logo.png"></a>
+          <label class="ui center aligned">Sign In</label>
+        </div>
+
+        <form class="ui form" id="login-form" method="POST" action="/signin/">
+          {% if request.GET.next %}
+          <input type="text" name="next" value="{{ request.GET.next }}" hidden>
+          {% endif %} {% csrf_token %}
+          <div class="field">
+            <input type="text" id="username" name="username" placeholder="Username">
+          </div>
+          <div class="field">
+            <input type="password" id="password" name="password" placeholder="Password">
+          </div>
+          <div class="ui {% if messages %}visible {% endif %}error message">
+            {% if messages %}
+            <ul class="list">
+              {% for message in messages %}
+              <li>{{ message }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+        </form>
+
+        <!-- Button panel -->
+        <div id="action-panel">
+          <a class="back" href="/signup">No Account?</a>
+          <a id="signin-button" class="next">Next</a>
+        </div>
+
+      </div>
+    </div>
+    {% endif %}
   </div>
 </body>
-
-{% include 'signin-modal.html' %}
 
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/semantic/dist/semantic.js"></script>
 <script src="/static/js/signin.js"></script>
-<script>
+<!-- <script>
   $('.modal')
     .addClass('active');
-</script>
+</script> -->
 
 </html>
