--- a/designSite/static/css/signup.css
+++ b/designSite/static/css/signup.css
@@ -1,7 +1,24 @@
+.signup{
+  width: 600px;
+  height: 600px;
+  border-radius: 0%;
+  border: 3px solid rgb(60, 57, 52);
+  background-color: transparent;
+  margin: auto;
+}
+
+.border-div {
+  height: 600px;
+}
+
+.content {
+  margin-top: -530px;
+}
+
 .back {
   margin-right: 70;
   text-decoration: underline;
   font-family: 'Times New Roman', Times, serif;
-  font-size: 30px;
-  color: white;
+  font-size: 25px;
+  color: rgb(168,49,64);
 }
